# SophieJanitor

./: .gitignore  LICENSE  debug_ask.py  pyproject.toml  readme.md
docs/: architecture.md
notebooks/: TestSophieJanitor.ipynb
scripts/: reindex_code_penal.py
src/sophie_janitor/: __init__.py  debug.py  generation.py  indexing.py  ingestion.py  retrieval.py  sophie_janitor.py
