[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "sophie-janitor"
version = "0.1.0"
description = "RAG juridique pour le Code pénal"
authors = [{ name = "David Guyomarch" }]
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "langchain",
    "langchain-chroma",
    "langchain-ollama",
    "chromadb"
]

[tool.setuptools.packages.find]
where = ["src"]
