[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "sophie-janitor"
version = "0.1.0"
description = "Legal RAG engine for French Penal Code"
authors = [{ name = "David Guyomarch" }]
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "langchain",
    "langchain-chroma",
    "langchain-ollama",
    "chromadb",
    "matplotlib"
]

[tool.setuptools.packages.find]
where = ["src"]
